# CI_Experiments

./: .gitignore  README.md  environment.yml
CI_Experiments/: .gitattributes  environment.yml  pyproject.toml
CI_Experiments/ci_experiments/: experiment.py
CI_Experiments/data/unprepared_process_logs/: BPIC11_f1.csv  BPIC11_f2.csv  BPIC11_f3.csv  BPIC11_f4.csv  BPIC15_1_f2.csv  BPIC15_2_f2.csv  BPIC15_3_f2.csv  BPIC15_4_f2.csv  BPIC15_5_f2.csv  BPIC17_O_Cancelled.csv  BPIC17_O_Refused.csv  BPIC2017.csv  Traffic_fines.csv  bpic2012_O_ACCEPTED-COMPLETE.csv  bpic2012_O_CANCELLED-COMPLETE.csv  bpic2012_O_DECLINED-COMPLETE.csv  (+5 more)
CI_Experiments/experiments/: BPIC17_activities_numeric_continuous_tryout.ipynb  BPIC17_experiment.ipynb  BPIC17_investigate_tryout.ipynb  BPIC17_other_models_tryout.ipynb  BPIC2012_experiment.ipynb  BPIC2017_experiment.ipynb  BPIC2017_numeric_comparison.ipynb  Production_experiment.ipynb  Sepsis_cases_experiment.ipynb  Traffic_fines.ipynb
CI_Experiments/other/: experiment_v2.ipynb  unified_metrics_painter.ipynb
CI_Experiments/pipeline/: causal_discovery.py  causal_estimation.py  pipeline.py  preparation.py
CI_Experiments/preparation/: BPIC2012.ipynb  BPIC2017.ipynb  Hospital_billing.ipynb  Production.ipynb  Sepsis_cases.ipynb  Traffic_fines.ipynb
CI_Experiments/preparation_code/: BPIC17_preparation.ipynb  preparation.py
CI_Experiments/source/: constants.py  datasets.py  experiment.py  params.py  results.py
CI_Experiments/tests/: encoding_test.py
CI_Experiments/utilities/: graph_drawer.ipynb  qinis_graphs_painter.ipynb
(+107 files in other folders)
