[tool.poetry]
name = "ci-experiments"
version = "0.1.0"
description = ""
authors = ["baltrama <lukas.baltramaitis@ut.ee>"]
readme = "README.md"
packages = [{include = "ci_experiments"}]

[tool.poetry.dependencies]
python = "^3.8"
ylearn = "^0.2.0"
pandas = "^2.0.0"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
jupyter = "^1.0.0"
networkx = "^3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
